--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg');
         }
 
+        #linkedin {
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png');
+        }
+
         #weather {
             position: absolute;
             top: 10px;
@@ -92,6 +96,7 @@
             <a id="instagram" href="https://instagram.com/enesayaz.16" target="_blank" title="Instagram"></a>
             <a id="github" href="https://github.com/enes-ayaz" target="_blank" title="GitHub"></a>
             <a id="whatsapp" href="https://wa.me/+905342525135" target="_blank" title="WhatsApp"></a>
+            <a id="linkedin" href="https://www.linkedin.com/in/enes-ayaz-564105326/" target="_blank" title="LinkedIn"></a>
         </div>
     </div>
     <div id="weather">
